// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`receiptItems.update > functionality > update name > foreign 1`] = `
{
  "updated": {
    "receiptItems": {
      "id:fc9e8c6e-8d8e-44ee-88d9-0fdd29c94826": {
        "name": "clam numquam aspernatur",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`receiptItems.update > functionality > update name > own 1`] = `
{
  "updated": {
    "receiptItems": {
      "id:1cd46715-0f8e-42c8-be6a-a006437b0218": {
        "name": "cito abutor impedit",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`receiptItems.update > functionality > update price > foreign 1`] = `
{
  "updated": {
    "receiptItems": {
      "id:fc9e8c6e-8d8e-44ee-88d9-0fdd29c94826": {
        "price": "290.0200",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`receiptItems.update > functionality > update price > own 1`] = `
{
  "updated": {
    "receiptItems": {
      "id:1cd46715-0f8e-42c8-be6a-a006437b0218": {
        "price": "286.9400",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`receiptItems.update > functionality > update quantity > foreign 1`] = `
{
  "updated": {
    "receiptItems": {
      "id:fc9e8c6e-8d8e-44ee-88d9-0fdd29c94826": {
        "quantity": "29.0000",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`receiptItems.update > functionality > update quantity > own 1`] = `
{
  "updated": {
    "receiptItems": {
      "id:1cd46715-0f8e-42c8-be6a-a006437b0218": {
        "quantity": "28.0000",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;
